[gd_scene load_steps=22 format=3 uid="uid://bbg4gdgvn4eq7"]

[ext_resource type="Script" path="res://GameMgr.gd" id="1_wxywa"]
[ext_resource type="PackedScene" uid="uid://b7hqrcllpaox7" path="res://palette/zako_a.tscn" id="2_uttrx"]
[ext_resource type="PackedScene" uid="uid://ceb0dol22kmsp" path="res://palette/zako_b.tscn" id="3_7ikp6"]
[ext_resource type="PackedScene" uid="uid://bq6vccvslwbq3" path="res://palette/zako_c.tscn" id="4_o6kp3"]
[ext_resource type="PackedScene" uid="uid://bx8uyqbbhpcn8" path="res://palette/monster.tscn" id="5_ctebt"]
[ext_resource type="AudioStream" uid="uid://bb1vu7j224a63" path="res://static_assets/sounds/Pickup_Coin33_n23.wav" id="6_bcqo4"]
[ext_resource type="Texture2D" uid="uid://b86lmjilemr1e" path="res://static_assets/props.png" id="6_nrh33"]
[ext_resource type="Script" path="res://SimplePool.gd" id="6_wrcgr"]
[ext_resource type="AudioStream" uid="uid://bqa4f2sf6yyca" path="res://static_assets/sounds/Powerup7_n30.wav" id="7_5boxo"]
[ext_resource type="AudioStream" uid="uid://dgq6s2th0rusb" path="res://static_assets/sounds/Explosion17_open_door_n23.wav" id="8_3wf0w"]
[ext_resource type="AudioStream" uid="uid://1wxos8ml5hm4" path="res://static_assets/sounds/door_deny_n23.wav" id="9_717ej"]

[sub_resource type="Theme" id="Theme_hy06a"]
default_font_size = 6

[sub_resource type="AtlasTexture" id="AtlasTexture_776xg"]
atlas = ExtResource("6_nrh33")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6joav"]
atlas = ExtResource("6_nrh33")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hsbo"]
atlas = ExtResource("6_nrh33")
region = Rect2(32, 32, 16, 16)

[sub_resource type="Animation" id="Animation_8ptgl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(68, -75)]
}

[sub_resource type="Animation" id="Animation_srkd3"]
resource_name = "play"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(68, -76), Vector2(68, 96), Vector2(68, 66), Vector2(68, 74)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cv1qx"]
_data = {
"RESET": SubResource("Animation_8ptgl"),
"play": SubResource("Animation_srkd3")
}

[sub_resource type="Animation" id="Animation_6ekps"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-211.5, 75)]
}

[sub_resource type="Animation" id="Animation_udtpw"]
resource_name = "play"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-211.5, 75), Vector2(77, 75), Vector2(65, 75), Vector2(65, 75), Vector2(56, 75), Vector2(333, 75)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nfduc"]
_data = {
"RESET": SubResource("Animation_6ekps"),
"play": SubResource("Animation_udtpw")
}

[node name="GameMgr" type="Node2D"]
script = ExtResource("1_wxywa")
ZakoAPrefab = ExtResource("2_uttrx")
ZakoBPrefab = ExtResource("3_7ikp6")
ZakoCPrefab = ExtResource("4_o6kp3")
MonsterPrefab = ExtResource("5_ctebt")
init_zakoA_slots = 0
init_zakoB_slots = 0
init_zakoC_slots = 0

[node name="PickupSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_bcqo4")

[node name="GenSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_5boxo")

[node name="DoorOpenSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_3wf0w")

[node name="DoorDenySFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_717ej")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="HUD"]
texture_filter = 1
custom_minimum_size = Vector2(320, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 180.0
mouse_filter = 1
theme = SubResource("Theme_hy06a")

[node name="LabelFPS" type="Label" parent="HUD/GUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -12.0
grow_horizontal = 0
grow_vertical = 0
text = "FPS 60"

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/GUI"]
layout_mode = 1
offset_right = 72.0
offset_bottom = 69.0
theme_override_constants/separation = -2

[node name="LabelZakoA" type="Label" parent="HUD/GUI/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.247059, 0.878431, 0.584314, 1)
custom_minimum_size = Vector2(88, 0)
layout_mode = 2
theme_override_constants/line_spacing = -2
text = "GGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGG"
vertical_alignment = 1
autowrap_mode = 3

[node name="LabelZakoB" type="Label" parent="HUD/GUI/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.231373, 0.623529, 0.905882, 1)
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
theme_override_constants/line_spacing = -2
text = "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB"
vertical_alignment = 1
autowrap_mode = 3

[node name="LabelZakoC" type="Label" parent="HUD/GUI/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.909804, 0, 0.94902, 1)
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
theme_override_constants/line_spacing = -2
text = "IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII"
vertical_alignment = 1
autowrap_mode = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="HUD/GUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_top = 2.0
offset_bottom = 69.0
grow_horizontal = 0
theme_override_constants/separation = 0
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/GUI/VBoxContainer2"]
layout_mode = 2

[node name="LabelKeyYellow" type="Label" parent="HUD/GUI/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.792157, 0.780392, 0.0509804, 1)
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 12
text = "99"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="TextureRect" type="TextureRect" parent="HUD/GUI/VBoxContainer2/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_776xg")

[node name="HBoxContainer2" type="HBoxContainer" parent="HUD/GUI/VBoxContainer2"]
layout_mode = 2

[node name="LabelKeyBlue" type="Label" parent="HUD/GUI/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
self_modulate = Color(0.0823529, 0.596078, 0.92549, 1)
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 12
text = "99"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="TextureRect" type="TextureRect" parent="HUD/GUI/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
texture = SubResource("AtlasTexture_6joav")

[node name="HBoxContainer3" type="HBoxContainer" parent="HUD/GUI/VBoxContainer2"]
layout_mode = 2

[node name="LabelKeyRed" type="Label" parent="HUD/GUI/VBoxContainer2/HBoxContainer3"]
unique_name_in_owner = true
self_modulate = Color(0.866667, 0, 0.262745, 1)
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 12
text = "99"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="TextureRect" type="TextureRect" parent="HUD/GUI/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
texture = SubResource("AtlasTexture_3hsbo")

[node name="WinInfo" type="Label" parent="HUD/GUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 68.0
offset_top = -75.0
offset_right = 252.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "Victory is yours!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/GUI/WinInfo"]
libraries = {
"": SubResource("AnimationLibrary_cv1qx")
}
autoplay = "RESET"

[node name="DiedInfo" type="Label" parent="HUD/GUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 68.0
offset_top = -75.0
offset_right = 252.0
offset_bottom = -4.0006
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -8
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "You died!
Esc to Restart"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/GUI/DiedInfo"]
libraries = {
"": SubResource("AnimationLibrary_cv1qx")
}
autoplay = "RESET"

[node name="TitleInfo" type="Label" parent="HUD/GUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.5
offset_top = 75.0
offset_right = -16.5
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "SOLO CHANTING"

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/GUI/TitleInfo"]
libraries = {
"": SubResource("AnimationLibrary_nfduc")
}

[node name="RestartHint" type="Label" parent="HUD/GUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 9.0
grow_horizontal = 2
text = "Restart Game: Esc"

[node name="SimplePool" type="Node" parent="."]
script = ExtResource("6_wrcgr")
